refactor: watermark를 lastProcessedDate로 변경
